<resources>
    <string name="app_name">Veb Dental Care</string>
    <string name="lblTitle">Case History</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="dob">DOB</string>
    <string name="age">Age</string>
    <string name="aaddharCardNo">AadharCard No</string>
    <string name="photo">Photo</string>
    <string name="mobileNo">Mobile No</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="welcome">View All Patients</string>
    <string name="reportDate">Report Date</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>


    <string-array name="treatment_array">
        <item>Extractions</item>
        <item>Fillings</item>
        <item>RCT Anterior</item>
        <item>RCT Posterior</item>
        <item>RPD</item>
        <item>Implant</item>
        <item>CD</item>
        <item>Oral Medicines</item>
        <item>Ortho</item>
    </string-array>
    <string name="treatment_prompt">Choose a Treatment</string>


    <string name="action_settings">Settings</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading...</string>

</resources>
