<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingTop="5dip"
            android:paddingBottom="1dip">
            <!-- Logo Start-->
            <ImageView android:src="@drawable/dentalbanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"/>
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:background="@layout/footer_repeat"
            android:layout_alignParentBottom="true">
        </LinearLayout>
        <!-- Footer Ends -->


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:layout_below="@id/header">



        <TextView

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstName"
            android:textColor="@color/colorPrimaryDark"

            />

        <EditText
            android:id="@+id/txtfirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:singleLine="true"
            android:layout_marginBottom="2dip"
            android:hint="@string/firstName"
            android:inputType="textCapCharacters"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:textColor="@color/colorPrimaryDark"
            />

            <EditText
                android:id="@+id/txtlastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:singleLine="true"
                android:layout_marginBottom="2dip"
                android:hint="@string/firstName"
                android:inputType="textCapCharacters"
                />


                <TextView
                    android:layout_below="@+id/txtTitleDOB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:textColor="@color/colorPrimaryDark"

                    />
                <EditText
                    android:id="@+id/editDOB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dip"
                    android:singleLine="true"
                    android:layout_below="@+id/txtTitleDOB"
                    android:layout_marginBottom="5dip"
                    android:ems="5"
                     />

            <TextView
                android:layout_below="@+id/editDOB"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/colorPrimaryDark"

                />
            <EditText
                android:id="@+id/txtAge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:singleLine="true"
                android:layout_marginBottom="2dip"
                android:hint="@string/age"
                android:inputType="number"
                />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobileNo"
            android:textColor="@color/colorPrimaryDark"

            />

        <EditText
            android:id="@+id/txtMobileNo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:layout_marginBottom="2dip"
            android:hint="phone_hint"
            android:inputType="phone"
            android:maxLength="10"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1" >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/colorPrimaryDark"


            />
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1" >

        <RadioGroup

            xmlns:android="http://schemas.android.com/apk/res/android"

            android:id="@+id/prefgroup"

            android:layout_width="200dp"

            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"

                android:layout_width="100dp"
                android:layout_height="wrap_content"

                android:text="Male"
                android:textColor="@color/colorPrimaryDark"


                />

            <RadioButton
                android:id="@+id/female"

                android:layout_width="100dp"
                android:layout_height="wrap_content"

                android:text="Female"
                android:textColor="@color/colorPrimaryDark"

                />

        </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1" >


        <ImageView
            android:id="@+id/imageview"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/photo"/>


        <ImageButton
            android:id="@+id/btnphoto"
            android:layout_width="25dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_camera"

            android:clickable="true"
            android:text="Save Info"
            android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Location"
            android:id="@+id/btnGPSShowLocation"
            android:layout_toEndOf="@+id/textView"

            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true" />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Address"
            android:id="@+id/btnShowAddress"
            android:layout_toEndOf="@+id/tvAddress"
            android:layout_below="@+id/btnGPSShowLocation"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvAddress"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="134dp"
            android:layout_alignParentEnd="true" />



    </LinearLayout>
-->
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:layout_below="@id/btnphoto">
               <!-- <Button
                    android:id="@+id/btnChecked"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:singleLine="true"
                    android:layout_marginBottom="2dip"
                    android:layout_below="@+id/btnphoto"
                    android:text="Get checked items">
                </Button>
                <ListView
                    android:id="@+id/lvMain"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dip"
                    android:singleLine="true"
                    android:layout_marginBottom="1dip"
                    android:layout_below="@+id/btnChecked"
                    >
                </ListView>-->
                <!--<Spinner
                    android:id="@+id/treatmentSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/treatment_array"
                    android:prompt="@string/treatment_prompt" />-->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/treatment_prompt"
                    android:textColor="@color/colorPrimaryDark"

                    />
                <com.example.vebdentalcare.MultiSelectionSpinner
                    android:id="@+id/treatmentSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/treatment_prompt"
                    android:spinnerMode="dropdown" />


            </LinearLayout>


            <Button android:id="@+id/btnsave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:textColor="@color/titleColor"
                android:background="@color/colorPrimaryDark"
                android:text="Register"/>

    </LinearLayout>

    </RelativeLayout>
</ScrollView>